--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,16 @@ jobs:
     strategy:
       matrix:
         include:
+          - os: macos-latest
+            TARGET: macos
+            CMD_BUILD: pyinstaller python/build-osx-linux.spec
+            CMD_ZIP: zip -r9 RedEle_macOS_${{ github.ref_name }}.zip RedEle
+            OUT_FILE_NAME: RedEle_macOS_${{ github.ref_name }}.zip
+          - os: ubuntu-latest
+            TARGET: linux
+            CMD_BUILD: pyinstaller python/build-osx-linux.spec
+            CMD_ZIP: zip -r9 RedEle_Linux_${{ github.ref_name }}.zip RedEle
+            OUT_FILE_NAME: RedEle_Linux_${{ github.ref_name }}.zip
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller python\build-win.spec
@@ -28,6 +38,27 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: 3.13
+
+    - name: Install pre-requisite dependencies for linux
+      if: ${{matrix.TARGET == 'linux'}}
+      run: |
+        sudo apt update
+        sudo apt install -y dpkg-dev \
+          build-essential \
+          python3-dev \
+          freeglut3-dev \
+          libgl1-mesa-dev \
+          libglu1-mesa-dev \
+          libgstreamer-plugins-base1.0-dev \
+          libgtk-3-dev \
+          libjpeg-dev \
+          libnotify-dev \
+          libpng-dev \
+          libsdl2-dev \
+          libsm-dev \
+          libtiff-dev \
+          libwebkit2gtk-4.1-dev \
+          libxtst-dev
 
     - name: Install dependencies
       run: |
